<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kittikaty.kate.travelopener.HomePage"
    android:orientation="vertical"
    android:background="#282A2E">

    <Button
        android:text="@string/mymap"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/map"
        android:background="@drawable/ic_button"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />

    <Button
        android:text="@string/myachivements"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/achievements"
        android:background="@drawable/ic_button"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />

    <Button
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/settings"
        android:background="@drawable/ic_button"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />
</LinearLayout>
